--- a/second_page.html
+++ b/second_page.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <style>
+        body {
+          background-image: url('background-image.jpg');
+          background-size: cover;  
+          background-repeat: no-repeat; 
+        }
+          </style>
     <title>Second Page</title>
 </head>
 <body>
