--- a/second_page.html
+++ b/second_page.html
@@ -6,6 +6,7 @@
           background-image: url('background-image.jpg');
           background-size: cover;  
           background-repeat: no-repeat; 
+          text-align:center;
         }
           </style>
     <title>Second Page</title>
