--- a/second_page.html
+++ b/second_page.html
@@ -29,11 +29,12 @@
         </section>
     </main>
      <h2> Contact</h2>
+     <hr>
      <form>
-     Name:<input type="text">
-     Contact Number:<input type="text">
-     E -mail id:<input type="text">
-     Date of Birthday:<input type="date">
+     Name:<input type="text"><br>
+     Contact Number:<input type="text"><br>
+     E -mail id:<input type="text"><br>
+     Date of Birthday:<input type="date"><br>
      </form>
 
     <footer>
