--- a/second_page.html
+++ b/second_page.html
@@ -31,10 +31,10 @@
      <h2> Contact</h2>
      <hr>
      <form>
-     Name:<input type="text"><br>
-     Contact Number:<input type="text"><br>
-     E -mail id:<input type="text"><br>
-     Date of Birthday:<input type="date"><br>
+     Name:<input type="text"><br><br><br><br>
+     Contact Number:<input type="text"><br><br><br><br>
+     E -mail id:<input type="text"><br><br><br><br>
+     Date of Birthday:<input type="date"><br><br><br><br>
      </form>
 
     <footer>
