--- a/second_page.html
+++ b/second_page.html
@@ -6,8 +6,10 @@
           background-image: url('background-image.jpg');
           background-size: cover;  
           background-repeat: no-repeat; 
-          text-align:center;
         }
+          form {
+               text-align:center;
+          }
           </style>
     <title>Second Page</title>
      <nav>
