--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <style>
         body {
-          background-image: url('background-image.jpg');
+          background-image: url('japan.jpg');
           background-size: cover;  
           background-repeat: no-repeat; 
         }
