--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <section>
             <h2>About</h2>
             <p>This is the index page of my website. Feel free to explore!</p>
+             iframe src="https://adityatripathi692.github.io/resume/" width="800" height="600" frameborder="0"></iframe>
+
+
         </section>
     </main>
 
