--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <h2>About</h2>
             <p>This is the index page of my website. Feel free to explore!</p>
-             <iframe src="https://adityatripathi692.github.io/resume/" width="800" height="600" frameborder="0"></iframe>
+          
 
 
         </section>
@@ -35,4 +35,7 @@
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 </body>
+    <iframe src="https://adityatripathi692.github.io/new-project/" width="800" height="600" ></iframe>
+
+
 </html>
