--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
 </body>
-    <iframe src="https://adityatripathi692.github.io/new-project/" width="800" height="600" ></iframe>
+    <iframe src="https://adityatripathi692.github.io/resumehtml/" width="800" height="600" ></iframe>
 
 
 </html>
