--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <section>
-            <h2>About</h2>
+            <h2>About Me (:/h2>
             <p>This is the index page of my website. Feel free to explore!</p>
           
 
